src_old/objects/ProjectType__c.object
<CustomObject>
    <description>Project Type defines a collection of Services and sets configuration options for a Project. Project Type is related to Project, Project Type Execution Company, Project Type Service, and Location Assignment.</description>
    <fields>
        <fullName>AddLocationsLeadTime__c</fullName>
        <label>Add Locations Lead Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AllowBundlingOfServices__c</fullName>
        <defaultValue>true</defaultValue>
        <description>To allow bundling service for specific project type</description>
        <label>Allow Bundling of Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AllowMultidays__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Multi-days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AllowReattempt__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Allow Reattempt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AllowTeamManagement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow Team Management in OneHub Mobile</description>
        <inlineHelpText>Allow Team Management in OneHub Mobile</inlineHelpText>
        <label>Allow Team Management in OneHub Mobile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CreateInvoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default3PLAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default 3PL Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Default3PLAccount</relationshipLabel>
        <relationshipName>DefaultThridPartyAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DefaultRetailerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Retailer Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.OneHubAccountType__c</field>
                <operation>equals</operation>
                <value>Retailer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Project Types</relationshipLabel>
        <relationshipName>Project_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GracePeriodDuration__c</fullName>
        <label>Grace Period Duration</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InvoiceGracePeriod__c</fullName>
        <label>Invoice Grace Period</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InvoiceStartDate__c</fullName>
        <label>Invoice Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsOneHubMobile__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicated if the projects are executed by OHM.</description>
        <label>Is OneHub Mobile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsProjectAccountMandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Project Account Mandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JobCancelLeadTime__c</fullName>
        <label>Job Cancel Lead Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LaunchLeadTime__c</fullName>
        <label>Launch Lead Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaxServiceCount__c</fullName>
        <label>Max Service Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MinServiceCount__c</fullName>
        <label>Min Service Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProjectTypeDescription__c</fullName>
        <label>Project Type Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScheduleOption__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Schedule Option</label>
        <referenceTo>ScheduleOption__c</referenceTo>
        <relationshipLabel>Project Types</relationshipLabel>
        <relationshipName>Project_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ServiceModel__c</fullName>
        <label>Service Model</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Continuity</fullName>
                </value>
                <value>
                    <fullName>Retail On Demand(Merchandising)</fullName>
                </value>
                <value>
                    <fullName>Remodel</fullName>
                </value>
                <value>
                    <fullName>Reset</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SetScheduleDateLeadTime__c</fullName>
        <defaultValue>3</defaultValue>
        <label>Set Schedule Date Lead Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShowProjectSummaryReport__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Project Summary Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UseReservations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Reservations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Visible__c</fullName>
        <defaultValue>false</defaultValue>
        <description>determine the visibility of the project attribute segment</description>
        <inlineHelpText>determine if the project attribute segment is visible or not</inlineHelpText>
        <label>Visible</label>
        <type>Checkbox</type>
    </fields>
    <label>Project Type</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ProjectTypeDescription__c</columns>
        <columns>MinServiceCount__c</columns>
        <columns>MaxServiceCount__c</columns>
        <columns>LaunchLeadTime__c</columns>
        <columns>GracePeriodDuration__c</columns>
        <columns>AllowTeamManagement__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Types</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Disallow_multi_day_and_bundled</fullName>
        <active>true</active>
        <description>Multi day projects not allowed when a project is bundled.</description>
        <errorConditionFormula>AND ( AllowBundlingOfServices__c == true,  AllowMultidays__c == true)</errorConditionFormula>
        <errorDisplayField>AllowMultidays__c</errorDisplayField>
        <errorMessage>Multi Day projects are not allowed on a project that allows bundling of services.</errorMessage>
    </validationRules>
</CustomObject>